# taramail

./: .env.example  CHANGES.rst  compose.dev.yml  compose.yml  package-lock.json
.github/actions/setup-uv-env/: action.yml
.github/workflows/: test.yml
backend/: pyproject.toml
backend/alembic/versions/: 2a8c4f6e9b01_add_dmarc_report_tables.py
backend/docs/: services.rst
backend/taramail/: db.py  dmarc.py  models.py  socketmap.py
backend/taramail/testing/: services.py
backend/tests/unit/: test_netfilter.py  test_socketmap.py
blackbox_exporter/: Dockerfile
dovecot/: Dockerfile
prometheus/: prometheus.yml
